k8s/gke-deploy/05-fraud-detection-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection-service
  namespace: upi-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-detection-service
  template:
    metadata:
      labels:
        app: fraud-detection-service
    spec:
      containers:
        - name: fraud-detection-service
          image: us-central1-docker.pkg.dev/upi-workshop-492606/upi-repo/fraud-detection-service:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 45
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  namespace: upi-system
spec:
  selector:
    app: fraud-detection-service
  ports:
    - port: 80
      targetPort: 8082
  type: ClusterIP
