k8s/gke-deploy/08-loadbalancers.yaml
apiVersion: v1
kind: Service
metadata:
  name: upi-demo-lb
  namespace: upi-system
spec:
  type: LoadBalancer
  selector:
    app: upi-demo-service
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-lb
  namespace: upi-system
spec:
  type: LoadBalancer
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-lb
  namespace: upi-system
spec:
  type: LoadBalancer
  selector:
    app: fraud-detection-service
  ports:
    - port: 80
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-bq-lb
  namespace: upi-system
spec:
  type: LoadBalancer
  selector:
    app: analytics-bq
  ports:
    - port: 80
      targetPort: 8083
