k8s/gke-deploy/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upi-ingress
  namespace: upi-system
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: upi-transfer-service
                port:
                  number: 80
          - path: /demo
            pathType: ImplementationSpecific
            backend:
              service:
                name: upi-demo-service
                port:
                  number: 80
          - path: /demo/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: upi-demo-service
                port:
                  number: 80
  defaultBackend:
    service:
      name: upi-transfer-service
      port:
        number: 80
